# game-save-backup

./: .gitignore  README.md  config-template.toml  main.py  pyproject.toml
saves/: config-template.toml
saves/Notia/: config.toml
saves/Raft/: config.toml
saves/冬日狂想曲/: config.toml
saves/冬日狂想曲/2025-04-22_04-48-48/: file1.rpgsave  file2.rpgsave  file3.rpgsave  file4.rpgsave  global.rpgsave
saves/冲刺赛车物语/: config.toml
saves/冲刺赛车物语/2025-05-15_19-12-48/: 0000  0001  0003  data.txt  temp.txt
saves/冲刺赛车物语/2025-06-09_03-46-17/: 0000  0001  0002  0003  0004
saves/动物井/: config.toml
saves/动物井/2025-04-22_05-51-50/: AnimalWell.sav
saves/只狼/: config.toml
saves/咩咩启示录/: config.toml
saves/地心护核者/: config.toml
saves/地心护核者/2025-04-22_05-51-50/: Admins.json  prefs.json.pugbackup
saves/塞尔达传说智慧再现/: config.toml
saves/夏日狂想曲+/: config.toml
saves/夏日狂想曲+/2025-04-22_04-48-48/: common.rpgsave  file1.rpgsave  file2.rpgsave  file3.rpgsave  file4.rpgsave  file5.rpgsave  file6.rpgsave  global.rpgsave
saves/小缇娜的奇幻冒险/: config.toml
saves/戴森球计划/: config-blueprint.toml  config-save.toml
saves/无限机兵/: config.toml
saves/暗黑破坏神2/: config.toml
saves/格兰蒂亚秘闻/: config-player.toml  config-world.toml
saves/森林之子/: config.toml
saves/死亡搁浅/: config.toml
saves/泰拉瑞亚/: config-Players.toml  config-Worlds.toml
saves/潜水员戴夫/: config.toml
saves/缺氧/: config.toml
saves/蓝途王子/: config.toml
saves/遗迹灰烬重生/: config.toml
saves/霍格沃茨之遗/: config.toml
saves/魔法工艺/: config.toml
saves/黑暗之魂3/: config.toml
saves/黑神话悟空/: config.toml
saves/黑荆棘角斗场/: config.toml
(+238 files in other folders)
